--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <div class="title">Kevin Golden's Example Site</div>
     <div class="button-container">
         <button class="button" onclick="location.href='desc.html'">📙</button>
-        <button class="button" onclick="location.href='endless.html'">🗺️</button>
-        <button class="button" onclick="location.href='maps.html'">
+        <button class="button" onclick="location.href='maps.html'">🗺️</button>
+        <button class="button" onclick="location.href='endless.html'">
             <img src="https://www.pngkey.com/png/full/640-6407262_post-new-mr-clean.png" alt="Mr. Clean" style="height: 40px;">
         </button>
     </div>
