--- a/endless.html
+++ b/endless.html
@@ -27,9 +27,24 @@
 
         .mr-clean {
             position: fixed;
-            bottom: 10px;
-            right: 10px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             z-index: 1000;
+            cursor: pointer;
+        }
+
+        .message-box {
+            position: fixed;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, 0.8);
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            display: none;
+            z-index: 1001;
         }
 
         .content {
@@ -46,12 +61,28 @@
     <div class="header">Mr. Golden = Mr. Clean</div>
     <div class="content">
         <h1>Welcome to the Endless Page</h1>
-        <p>This is where you can add content that never ends. Customize it as you wish!</p>
+        <p>This is where you can forever see Mr.Clean!</p>
         <p>Scroll down to see Mr. Clean always watching over you!</p>
         <!-- Add more content here to demonstrate the scrolling effect -->
     </div>
-    <div class="mr-clean">
+    <div class="mr-clean" onclick="showMessage()">
         <img src="https://www.pngkey.com/png/full/640-6407262_post-new-mr-clean.png" alt="Mr. Clean" style="height: 100px;">
     </div>
+    <div class="message-box" id="messageBox">
+        Yes, Nicholas will forever remind you that "Mr. Golden = Mr. Clean"
+    </div>
+
+    <script>
+        function showMessage() {
+            const messageBox = document.getElementById('messageBox');
+            messageBox.style.display = 'block';
+            const message = "Yes, Nicholas will forever remind you that 'Mr. Golden = Mr. Clean'";
+            const utterance = new SpeechSynthesisUtterance(message);
+            window.speechSynthesis.speak(utterance);
+            setTimeout(() => {
+                messageBox.style.display = 'none';
+            }, 3000);
+        }
+    </script>
 </body>
 </html>
