--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="title">Kevin Golden's Example Site</div>
     <div class="button-container">
         <button class="button" onclick="location.href='desc.html'">📙</button>
-        <button class="button" onclick="location.href='maps.html'">🗺️</button>
+        <button class="button" onclick="location.href='m&p.html'">🗺️</button>
         <button class="button" onclick="location.href='endless.html'">
             <img src="https://www.pngkey.com/png/full/640-6407262_post-new-mr-clean.png" alt="Mr. Clean" style="height: 40px;">
         </button>
