--- a/m&p.html
+++ b/m&p.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>History Maps & Paintings</title>
+    <title>History Maps and Paintings</title>
     <style>
         body {
             background-color: black;
@@ -18,10 +18,16 @@
         h1 {
             font-size: 3em;
             font-weight: bold;
+            margin-bottom: 0;
+        }
+        h2 {
+            font-size: 1.5em;
+            margin-top: 0;
         }
         .button-container {
             display: flex;
             gap: 20px;
+            margin-top: 20px;
         }
         .button-frame {
             border: 2px solid orange;
@@ -29,34 +35,24 @@
             cursor: pointer;
             display: inline-block;
             text-align: center;
-            position: relative;
-        }
-        .button-frame:hover .tooltip {
-            display: block;
-        }
-        .tooltip {
-            display: none;
-            position: absolute;
-            bottom: -30px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: orange;
-            color: black;
-            padding: 5px;
-            border-radius: 5px;
+            width: 150px;
+            height: 150px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 15px;
         }
     </style>
 </head>
 <body>
-    <h1>History Maps and Paintings</h1>
+    <h1>History</h1>
+    <h2>Maps & Paintings</h2>
     <div class="button-container">
-        <div class="button-frame" onclick="location.href='paintings.html'">
-            🎨
-            <div class="tooltip">Go to Paintings</div>
-        </div>
         <div class="button-frame" onclick="location.href='maps.html'">
             🗺️
-            <div class="tooltip">Go to Maps</div>
+        </div>
+        <div class="button-frame" onclick="location.href='paintings.html'">
+            🎨
         </div>
     </div>
 </body>
