--- a/scary.html
+++ b/scary.html
@@ -68,6 +68,11 @@
                 setTimeout(() => {
                     window.location.href = 'index.html';
                 }, 2000);
+            } else if (userInput === "mr.golden = mr.clen" || userInput === "mr. golden = mr. clean") {
+                messageDiv.innerText = "Bruh, what? That's literally what Nick puts on the board every day!";
+                setTimeout(() => {
+                    window.location.href = 'https://ih1.redbubble.net/image.5319266421.4422/raf,360x360,075,t,fafafa:ca443f4786.u1.jpg';
+                }, 5000);
             } else {
                 messageDiv.innerText = `${nameInput.value}...? No. Guess again!`;
             }
