--- a/m&p.html
+++ b/m&p.html
@@ -19,10 +19,12 @@
             font-size: 3em;
             font-weight: bold;
             margin-bottom: 0;
+            text-align: center;
         }
         h2 {
             font-size: 1.5em;
             margin-top: 0;
+            text-align: center;
         }
         .button-container {
             display: flex;
@@ -64,13 +66,14 @@
 
         .nav-button:hover {
             background-color: #FF1493;
+        }
     </style>
 </head>
 <body>
     <div id="navbar">
         <button class="nav-button" onclick="location.href='index.html'">Home</button>
+    </div>
     <h1>History</h1>
-</div>
     <h2>Maps & Paintings</h2>
     <div class="button-container">
         <div class="button-frame" onclick="location.href='maps.html'">
@@ -82,3 +85,4 @@
     </div>
 </body>
 </html>
+
